added endgame menu popup

--- a/index.html
+++ b/index.html
@@ -19,6 +19,12 @@
     </div>
     <div class="board"></div>
 
+    <div class="end-game">
+      <h1 id="result--display">YOU WON!</h1>
+      <h2 id="end--time">Time: 00:00</h2>
+      <button class="reset" id="play--again" disabled>Try Again</button>
+    </div>
+
   <script src="script.js"></script>
 </body>
 </html>
